--- a/pom.xml
+++ b/pom.xml
@@ -67,5 +67,10 @@
           <version>1.21-R0.1-SNAPSHOT</version>
           <scope>provided</scope>
       </dependency>
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>8.0.28</version>
+      </dependency>
   </dependencies>
 </project>
